--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.7.7",
+    "currency-symbol-map": "^5.1.0",
     "idb": "^8.0.0",
     "moment": "^2.30.1"
   }
